Add SCF support and fence coverage to ElideTimepointsPass. This is a fairly large capability upgrade for existing programs that used HAL fences to interop with externally allocated or managed buffers (kvcaches, etc): we can now track the timeline across the HAL ops thanks to the TimelineAwareOpInterface and fence-like support (we don't use HAL fences, just say that there are fence-like objects that are not defined by use-def chains like timepoints are).
SCF support is also added for several cases where we can
(today) easily identify coverage - e.g., scf.if/scf.index_switch
are the easy cases, while we have some initial conservative
handling of scf.for/scf.while. Nesting is supported and we have
test coverage for it but there may still be cases that thwart
the analysis and result in extra joins/awaits.

Part of #16168 PR sequence (5/6).

--- a/compiler/src/iree/compiler/Dialect/Stream/Transforms/test/CMakeLists.txt
+++ b/compiler/src/iree/compiler/Dialect/Stream/Transforms/test/CMakeLists.txt
@@ -25,7 +25,9 @@ iree_lit_test_suite(
     "elide_async_copies.mlir"
     "elide_async_transfers.mlir"
     "elide_timepoints_coverage.mlir"
+    "elide_timepoints_fold.mlir"
     "elide_timepoints_immediate.mlir"
+    "elide_timepoints_scf.mlir"
     "emplace_allocations.mlir"
     "emplace_transients.mlir"
     "emplace_transients_scf.mlir"
@@ -48,6 +50,7 @@ iree_lit_test_suite(
     "pack_dispatch_operands.mlir"
     "propagate_subviews.mlir"
     "propagate_timepoints.mlir"
+    "propagate_timepoints_scf.mlir"
     "refine_usage.mlir"
     "reuse_allocations.mlir"
     "schedule_allocation.mlir"
