ElideAsyncCopiesPass refactoring for SCF/transfer support. This adds SCF support for tracking elidable copies across control flow, `hal.tensor.import` consume handling, and topology-aware transfer elision that does not fight with itself.
For SCF the existing CF/block argument analysis is extended
to track values captured by regions and carried by the
RegionBranchOpInterface. We can detect when a value is
passed in as a loop initial value, updated each trip, and
finally returned.

`hal.tensor.import` has had the `consume` attribute on it for
ages but it was never used: now we can treat the imported
tensors with it set as having value semantics (like if we
originated the tensors internally) and can better elide
copies by potentially performing in-place operations on the
imported tensor without introducing copies (the COW pass will
still insert the copies defensively, but ElideAsyncCopiesPass
can now mostly remove them).

The existing ElideAsyncTransfersPass was added to try to
support topology-aware transfer elision but tended to fight
with COW/copy elision as if COW introduced copies after it
ran we'd never try to remove them. Now we are back to the
straightforward introduce copies for correctness -> elide
copies that are not required flow. The new
elide_async_copies_topology.mlir test covers more than our
old test transfer test did (including bugs I found that we
didn't handle correctly in the old pass).

Part of #16168 PR sequence (6/6).

--- a/compiler/src/iree/compiler/Dialect/Stream/Transforms/test/BUILD.bazel
+++ b/compiler/src/iree/compiler/Dialect/Stream/Transforms/test/BUILD.bazel
@@ -25,7 +25,10 @@ iree_lit_test_suite(
             "convert_to_stream.mlir",
             "dump_statistics.mlir",
             "elide_async_copies.mlir",
-            "elide_async_transfers.mlir",
+            "elide_async_copies_scf.mlir",
+            "elide_async_copies_tensor_import_consume.mlir",
+            "elide_async_copies_topology.mlir",
+            "elide_materialized_copies.mlir",
             "elide_timepoints_coverage.mlir",
             "elide_timepoints_fold.mlir",
             "elide_timepoints_immediate.mlir",
