Update the hip backend to support the stream api.
The large changes here are
1. The ability to parse and extract data from native hip executables.
   This is largely in runtime/src/iree/hal/drivers/hip/native_executable_hipf
2. Updates to the registry to store src ordinals so that we can track
   arg pointer arrays, and pack our parameters correctly.
3. Some very minor changes in the hip backend to be able to
   run the new raw hip modules.

--- a/runtime/src/iree/hal/drivers/hip/CMakeLists.txt
+++ b/runtime/src/iree/hal/drivers/hip/CMakeLists.txt
@@ -49,6 +49,8 @@ iree_cc_library(
     "memory_pools.h"
     "native_executable.c"
     "native_executable.h"
+    "native_executable_hipf.c"
+    "native_executable_hipf.h"
     "nop_executable_cache.c"
     "nop_executable_cache.h"
     "per_device_information.h"
