--- a/.github/workflows/pkgci_test_torch.yml
+++ b/.github/workflows/pkgci_test_torch.yml
@@ -110,7 +110,7 @@ jobs:
               - threadripper
           # MI325
           - name: amdgpu_mi325_gfx942
-            markers: "(gfx942 or mi325) and quality"
+            markers: "gfx942 or mi325"
             cache-dir: /shark-cache/data/iree-regression-cache
             summary-file: torch_models_amdgpu_mi325_summary.json
             runs-on: linux-mi325-1gpu-ossci-iree-org
