--- a/compiler/src/iree/compiler/Dialect/Stream/Transforms/test/BUILD.bazel
+++ b/compiler/src/iree/compiler/Dialect/Stream/Transforms/test/BUILD.bazel
@@ -55,6 +55,8 @@ iree_lit_test_suite(
             "schedule_allocation.mlir",
             "schedule_concurrency.mlir",
             "schedule_execution.mlir",
+            "schedule_execution_scf.mlir",
+            "schedule_execution_timeline_aware.mlir",
             "specialize_dispatches.mlir",
             "specialize_encodings.mlir",
             "sync_initializers.mlir",
