--- a/compiler/src/iree/compiler/Dialect/Stream/IR/test/BUILD.bazel
+++ b/compiler/src/iree/compiler/Dialect/Stream/IR/test/BUILD.bazel
@@ -18,6 +18,8 @@ iree_lit_test_suite(
         [
             "async_folding.mlir",
             "async_ops.mlir",
+            "async_parameter_folding.mlir",
+            "async_parameter_ops.mlir",
             "channel_folding.mlir",
             "channel_ops.mlir",
             "cmd_folding.mlir",
