--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -56,31 +56,32 @@
 # Compiler
 /compiler/src/iree/compiler/ @benvanik
 /compiler/src/iree/compiler/Codegen/ @MaheshRavishankar
-/compiler/src/iree/compiler/Codegen/Common @hanhanW @Max191
-/compiler/src/iree/compiler/Codegen/Common/GPU @antiagainst @qedawkins @Groverkss @kuhar
-/compiler/src/iree/compiler/Codegen/Dialect/Codegen @Max191
+/compiler/src/iree/compiler/Codegen/Common @hanhanW @Max191 @MaheshRavishankar
+/compiler/src/iree/compiler/Codegen/Common/GPU @qedawkins @Groverkss @kuhar
+/compiler/src/iree/compiler/Codegen/Dialect/Codegen @Max191 @MaheshRavishankar
 /compiler/src/iree/compiler/Codegen/Dialect/CPU @hanhanW
-/compiler/src/iree/compiler/Codegen/Dialect/GPU @antiagainst @qedawkins @Max191
+/compiler/src/iree/compiler/Codegen/Dialect/GPU @qedawkins @Max191 @Groverkss @nirvedhmeshram @krzysz00
 /compiler/src/iree/compiler/Codegen/Dialect/VectorExt @Groverkss
 /compiler/src/iree/compiler/Codegen/ExternalInterfaces @hanhanW @Max191
-/compiler/src/iree/compiler/Codegen/LLVMCPU/ @hanhanW @MaheshRavishankar @pashu123
-/compiler/src/iree/compiler/Codegen/LLVMGPU/ @MaheshRavishankar @qedawkins @kuhar @Groverkss
-/compiler/src/iree/compiler/Codegen/SPIRV/ @antiagainst @MaheshRavishankar @kuhar
-/compiler/src/iree/compiler/ConstEval/ @hanhanW @stellaraccident
+/compiler/src/iree/compiler/Codegen/LLVMCPU/ @hanhanW
+/compiler/src/iree/compiler/Codegen/LLVMGPU/ @qedawkins @kuhar @Groverkss @nirvedhmeshram @krzysz00 @Max191
+/compiler/src/iree/compiler/Codegen/SPIRV/ @kuhar
+/compiler/src/iree/compiler/ConstEval/ @hanhanW @MaheshRavishankar
 /compiler/src/iree/compiler/Dialect/Encoding/ @bjacob @hanhanW @Max191
 /compiler/src/iree/compiler/Dialect/Flow/ @hanhanW @MaheshRavishankar @IanWood1
 /compiler/src/iree/compiler/Dialect/LinalgExt/ @hanhanW @MaheshRavishankar @Groverkss @Max191 @IanWood1
-/compiler/src/iree/compiler/Dialect/TensorExt/ @hanhanW
-/compiler/src/iree/compiler/Dialect/Vulkan/ @antiagainst @kuhar
-/compiler/src/iree/compiler/DispatchCreation/ @hanhanW @MaheshRavishankar @IanWood1
-/compiler/src/iree/compiler/GlobalOptimization/ @hanhanW @IanWood1
-/compiler/src/iree/compiler/InputConversion/ @MaheshRavishankar @stellaraccident
+/compiler/src/iree/compiler/Dialect/Stream/ @benvanik @hanhanW @MaheshRavishankar
+/compiler/src/iree/compiler/Dialect/TensorExt/ @hanhanW @MaheshRavishankar @IanWood1
+/compiler/src/iree/compiler/Dialect/Vulkan/ @kuhar
+/compiler/src/iree/compiler/DispatchCreation/ @MaheshRavishankar @IanWood1
+/compiler/src/iree/compiler/GlobalOptimization/ @MaheshRavishankar @IanWood1
+/compiler/src/iree/compiler/InputConversion/ @MaheshRavishankar
 /compiler/src/iree/compiler/Preprocessing/ @qedawkins @MaheshRavishankar
 
 # Compiler Plugins
 /compiler/plugins/input/StableHLO/ @MaheshRavishankar @rsuderman
 /compiler/plugins/input/TOSA/ @MaheshRavishankar @rsuderman
-/compiler/plugins/target/ROCM/ @kuhar
+/compiler/plugins/target/ROCM/ @kuhar @krzysz00
 
 # Runtime
 /runtime/src/iree/ @benvanik
