major refactor to new config style
Signed-off-by: Eric Feng <Eric.Feng@amd.com>

--- a/compiler/src/iree/compiler/Utils/CMakeLists.txt
+++ b/compiler/src/iree/compiler/Utils/CMakeLists.txt
@@ -14,6 +14,7 @@ iree_cc_library(
   NAME
     Utils
   HDRS
+    "AttributeUtils.h"
     "ConversionUtils.h"
     "EmbeddedDataDirectory.h"
     "EquivalenceUtils.h"
@@ -33,6 +34,7 @@ iree_cc_library(
     "ToolUtils.h"
     "TracingUtils.h"
   SRCS
+    "AttributeUtils.cpp"
     "ConversionUtils.cpp"
     "EquivalenceUtils.cpp"
     "FlatbufferUtils.cpp"
