--- a/compiler/src/iree/compiler/Utils/BUILD.bazel
+++ b/compiler/src/iree/compiler/Utils/BUILD.bazel
@@ -32,6 +32,7 @@ iree_td_library(
 iree_compiler_cc_library(
     name = "Utils",
     srcs = [
+        "AttributeUtils.cpp",
         "ConversionUtils.cpp",
         "EquivalenceUtils.cpp",
         "FlatbufferUtils.cpp",
@@ -46,6 +47,7 @@ iree_compiler_cc_library(
         "TracingUtils.cpp",
     ],
     hdrs = [
+        "AttributeUtils.h",
         "ConversionUtils.h",
         "EmbeddedDataDirectory.h",
         "EquivalenceUtils.h",
