[Util] Implement InferIntDivisibilityOpInterface for affine ops
Implements divisibility inference for affine.apply, affine.min, and
affine.max operations through AffineExprDivisibilityFinder visitor.
The visitor recursively computes divisibility for affine expressions:
- Multiplication: product of operand divisibilities
- Addition/Subtraction: GCD (union) of operand divisibilities
- Division (floor/ceil): quotient when evenly divisible, else 1
- Modulo: falls back to minimum divisibility (1,1)
- Min/Max: GCD of all branch divisibilities

Adds TestIntegerDivisibilityAnalysis pass to more directly test
divisibility analysis without relying on IR optimizations. The pass
probes values with iree_unregistered.test_int_divisibility ops and
annotates them with computed divisibility attributes.

Also updates arith::DivUIOp divisibility calculation to fallback
to minimum divisibility when there is a remainder division,
because we can't infer the divisibility when there is a remainder.

Signed-off-by: Max Dawkins <max.dawkins@gmail.com>

--- a/compiler/src/iree/compiler/Dialect/Util/Transforms/CMakeLists.txt
+++ b/compiler/src/iree/compiler/Dialect/Util/Transforms/CMakeLists.txt
@@ -41,6 +41,7 @@ iree_cc_library(
     "StripDebugOps.cpp"
     "TestConversion.cpp"
     "TestFloatRangeAnalysis.cpp"
+    "TestIntegerDivisibilityAnalysis.cpp"
     "VerifyInitializationOrder.cpp"
     "VerifyStructuredControlFlow.cpp"
   DEPS
