--- a/compiler/src/iree/compiler/Utils/BUILD.bazel
+++ b/compiler/src/iree/compiler/Utils/BUILD.bazel
@@ -32,7 +32,7 @@ iree_td_library(
 iree_compiler_cc_library(
     name = "Utils",
     srcs = [
-        "AttributeUtils.cpp",
+        "EncodingUtils.cpp",
         "ConversionUtils.cpp",
         "EquivalenceUtils.cpp",
         "FlatbufferUtils.cpp",
@@ -47,7 +47,7 @@ iree_compiler_cc_library(
         "TracingUtils.cpp",
     ],
     hdrs = [
-        "AttributeUtils.h",
+        "EncodingUtils.h",
         "ConversionUtils.h",
         "EmbeddedDataDirectory.h",
         "EquivalenceUtils.h",
