--- a/compiler/src/iree/compiler/Codegen/SPIRV/test/BUILD.bazel
+++ b/compiler/src/iree/compiler/Codegen/SPIRV/test/BUILD.bazel
@@ -43,6 +43,7 @@ iree_lit_test_suite(
             "emulate_i64.mlir",
             "erase_storage_buffer_static_shape.mlir",
             "illegal_configuration.mlir",
+            "initial_vector_lowering_0d.mlir",
             "link_executables.mlir",
             "lower_masks.mlir",
             "lowering_matmul_fusion.mlir",
