Add GPULowerCoalescedDMAToGlobalLoads pass
This commit adds a new pass to lower coalesced DMA operations to global
loads for GPU codegen. The pass includes:

- GPULowerCoalescedDMAToGlobalLoads.cpp: Implementation of the lowering pass
- Added test file gpu_lower_coalesced_dma_to_global_loads.mlir
- Updated Transforms.cpp to support coalesced gather DMA operations

--- a/tests/e2e/rocm_specific/CMakeLists.txt
+++ b/tests/e2e/rocm_specific/CMakeLists.txt
@@ -15,6 +15,7 @@ iree_check_single_backend_test_suite(
     check_global_load_rocm_hip
   SRCS
     "lds_matmul.mlir"
+    "lds_matmul_coalesced_dma.mlir"
   TARGET_BACKEND
     "rocm"
   DRIVER
