--- a/compiler/src/iree/compiler/Dialect/TensorExt/IR/CMakeLists.txt
+++ b/compiler/src/iree/compiler/Dialect/TensorExt/IR/CMakeLists.txt
@@ -49,6 +49,7 @@ iree_cc_library(
     MLIRIR
     MLIRInferTypeOpInterface
     MLIRMemRefDialect
+    MLIRSCFDialect
     MLIRSupport
     MLIRTensorDialect
     iree::compiler::Dialect::Util::IR
