--- a/compiler/src/iree/compiler/Dialect/LinalgExt/Transforms/CMakeLists.txt
+++ b/compiler/src/iree/compiler/Dialect/LinalgExt/Transforms/CMakeLists.txt
@@ -30,6 +30,7 @@ iree_cc_library(
     "ConvertConv2DToWinograd.cpp"
     "ConvertConvToIm2ColOp.cpp"
     "ConvertToLoops.cpp"
+    "DecomposeAggregatedOps.cpp"
     "DecomposeAttention.cpp"
     "DecomposeIm2col.cpp"
     "DecomposeMapScatter.cpp"
