[Codegen] Drop certain encoding attributes after type propagation
Drop encoding attributes that do not need further materialization during Codegen after type propagation has used the information.

This happens as a second phase in the TypePropagationPass.

Signed-off-by: Lukas Sommer <lukas.sommer@amd.com>

--- a/compiler/src/iree/compiler/Codegen/Common/test/CMakeLists.txt
+++ b/compiler/src/iree/compiler/Codegen/Common/test/CMakeLists.txt
@@ -123,6 +123,7 @@ iree_lit_test_suite(
     "transform_ops_invalid.mlir"
     "transpose_canonicalization.mlir"
     "type_propagation.mlir"
+    "type_propagation_packed_storage.mlir"
     "type_propagation_packing.mlir"
     "unroll_annotated_loops.mlir"
     "vector_layout_analysis.mlir"
