[Encoding] Test i1 mask attention with packed_storage
Test attention with an `i1` mask using the `packed_storage` encoding attribute instead of the experimental flag to avoid extending `i1` to `i8` during compilation.

Currently the test needs to drop the unit extent dimension compared to the other attention tests due to problems with FoldUnitExtentDims.

Signed-off-by: Lukas Sommer <lukas.sommer@amd.com>

--- a/tests/e2e/linalg_ext_ops/BUILD.bazel
+++ b/tests/e2e/linalg_ext_ops/BUILD.bazel
@@ -17,6 +17,7 @@ ALL_SRCS = enforce_glob(
     [
         "arg_compare.mlir",
         "attention.mlir",
+        "attention_i1_mask_encoding.mlir",
         "gather.mlir",
         "map_scatter.mlir",
         "scan.mlir",
