Add missing Bazel excludes
Signed-off-by: Lukas Sommer <lukas.sommer@amd.com>

--- a/tests/e2e/linalg_ext_ops/BUILD.bazel
+++ b/tests/e2e/linalg_ext_ops/BUILD.bazel
@@ -81,6 +81,7 @@ VMVX_SRCS = enforce_glob(
     exclude = [
         "attention.mlir",
         "attention_i1_mask.mlir",
+        "attention_i1_mask_encoding.mlir",
     ],
 )
 
@@ -107,6 +108,7 @@ LLVM_GPU_SRCS = enforce_glob(
     exclude = [
         "attention.mlir",
         "attention_i1_mask.mlir",
+        "attention_i1_mask_encoding.mlir",
         "map_scatter.mlir",
     ],
 )
@@ -144,6 +146,7 @@ ROCM_HIP_SRCS = enforce_glob(
         "top-k.mlir",
         "attention.mlir",
         "attention_i1_mask.mlir",
+        "attention_i1_mask_encoding.mlir",
     ],
 )
 
@@ -171,6 +174,7 @@ iree_check_single_backend_test_suite(
         exclude = [
             "attention.mlir",
             "attention_i1_mask.mlir",
+            "attention_i1_mask_encoding.mlir",
             "map_scatter.mlir",
             "top-k.mlir",
         ],
@@ -196,6 +200,7 @@ iree_check_single_backend_test_suite(
         exclude = [
             "attention.mlir",
             "attention_i1_mask.mlir",
+            "attention_i1_mask_encoding.mlir",
             "map_scatter.mlir",
             "top-k.mlir",
         ],
