[Stream] Add UnifyEncodingForGlobals pass. 1/n
This pass identifies immutable globals that are encoded with multiple
different encodings and unifies them to a single encoding. This reduces
memory footprint when the same source data (e.g., model weights) is used
in multiple dispatch operations with different encoding requirements.

The pass:
- Traces from stream.tensor.encode ops back to source globals
- Requires both source and encoded globals to be immutable
- Uses identity encoding as a conservative fallback
- Updates both stream.tensor.encode and stream.tensor.sizeof consistently

This is the minimal functioning implementation. The pass will be built
incrementally with resolver integration and subgraph equivalence support.

Note that it does not work completely as dispatch sites and executables
are not updated.

It is a step towards #22485.

Signed-off-by: hanhanW <hanhan0912@gmail.com>

--- a/compiler/src/iree/compiler/Dialect/Stream/Transforms/BUILD.bazel
+++ b/compiler/src/iree/compiler/Dialect/Stream/Transforms/BUILD.bazel
@@ -53,6 +53,7 @@ iree_compiler_cc_library(
         "SpecializeDispatches.cpp",
         "SpecializeEncodings.cpp",
         "SyncInitializers.cpp",
+        "UnifyEncodingForGlobals.cpp",
         "VerifyAffinities.cpp",
         "VerifyAsyncAccessRanges.cpp",
         "VerifyLowerings.cpp",
