--- a/compiler/src/iree/compiler/Dialect/Stream/Transforms/CMakeLists.txt
+++ b/compiler/src/iree/compiler/Dialect/Stream/Transforms/CMakeLists.txt
@@ -49,6 +49,7 @@ iree_cc_library(
     "SpecializeDispatches.cpp"
     "SpecializeEncodings.cpp"
     "SyncInitializers.cpp"
+    "UnifyEncodingForGlobals.cpp"
     "VerifyAffinities.cpp"
     "VerifyAsyncAccessRanges.cpp"
     "VerifyLowerings.cpp"
