--- a/compiler/src/iree/compiler/Dialect/Stream/Transforms/test/CMakeLists.txt
+++ b/compiler/src/iree/compiler/Dialect/Stream/Transforms/test/CMakeLists.txt
@@ -65,6 +65,7 @@ iree_lit_test_suite(
     "specialize_dispatches.mlir"
     "specialize_encodings.mlir"
     "sync_initializers.mlir"
+    "unify_encoding_for_globals.mlir"
     "verify_affinities.mlir"
     "verify_async_access_ranges.mlir"
   TOOLS
