bazel: fix path and add numpy workaround
Signed-off-by: default <bartel@roofline.ai>

--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -17,6 +17,16 @@ bazel_dep(name = "bazel_skylib", version = "1.8.2")
 bazel_dep(name = "platforms", version = "1.0.0")
 bazel_dep(name = "rules_cc", version = "0.2.11")
 bazel_dep(name = "rules_python", version = "1.6.3")
+
+# Python pip dependencies
+pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
+pip.parse(
+    hub_name = "pip",
+    python_version = "3.11",
+    requirements_lock = "//build_tools/bazel:requirements.txt",
+)
+use_repo(pip, "pip")
+
 bazel_dep(name = "rules_shell", version = "0.6.1")
 
 # Required by LLVM (for clang-fuzzer tools)
