Adding SCF support to AutomaticReferenceCountingPass. Adds comprehensive support for SCF control flow ops (scf.for, scf.if, scf.while) to the pass.
- ScopedTimepointCoverage: Replaces LocalTimepointCoverage with scope-aware
  timepoint tracking that properly handles nested regions and control flow
- SCF op handlers: analyzeForLoop, analyzeIfOp, analyzeWhileOp that correctly
  track resources across region boundaries
- Resource yield prevention: Ensures resources captured by control flow regions
  are properly handled to prevent use-after-free
- Cross-scope timepoint coverage: Joins timepoints at scope boundaries for
  correct deallocation ordering

The pass now properly handles programs with SCF control flow instead of bailing
out when any SCF ops are present in a function.

--- a/compiler/src/iree/compiler/Dialect/Stream/Transforms/test/CMakeLists.txt
+++ b/compiler/src/iree/compiler/Dialect/Stream/Transforms/test/CMakeLists.txt
@@ -19,6 +19,7 @@ iree_lit_test_suite(
     "annotate_dispatch_arguments.mlir"
     "annotate_dispatch_assumptions.mlir"
     "automatic_reference_counting.mlir"
+    "automatic_reference_counting_scf.mlir"
     "clone_to_consumers.mlir"
     "convert_to_stream.mlir"
     "dump_statistics.mlir"
