Adding SplitParameterEncoderPass and global flags.
Key components:
- SplitParameterEncoder.cpp: Main pass implementation
  - Analyzes parameter usage across the module
  - Hoists hoistable operations (constants, splats, dispatches) to initializers
  - Generates parameter encoding module
- ParameterOptions: New pipeline options for parameter encoder configuration
  - --iree-parameter-encoder-mode=consolidate|overlay
  - --iree-parameter-encoder-target= (TBD)
  - --iree-parameter-encoder-output-file=encoder.mlirbc
  - --iree-parameter-encoder-output-scope=encoded (recommended)

This pass produces some of the more sophisticated programs the compiler
has encountered and due to its nature of streaming through large volumes of
parameters was very sensitive to all the bail-outs that were present.
The good news is that this upgrades the compiler quite a bit, at least!

--- a/compiler/src/iree/compiler/Dialect/Stream/Transforms/BUILD.bazel
+++ b/compiler/src/iree/compiler/Dialect/Stream/Transforms/BUILD.bazel
@@ -52,6 +52,7 @@ iree_compiler_cc_library(
         "ScheduleExecution.cpp",
         "SpecializeDispatches.cpp",
         "SpecializeEncodings.cpp",
+        "SplitParameterEncoder.cpp",
         "SyncInitializers.cpp",
         "UnifyEncodingForGlobals.cpp",
         "Utils.cpp",
@@ -101,6 +102,7 @@ iree_compiler_cc_library(
         "@llvm-project//mlir:Pass",
         "@llvm-project//mlir:SCFDialect",
         "@llvm-project//mlir:SCFToControlFlow",
+        "@llvm-project//mlir:SideEffectInterfaces",
         "@llvm-project//mlir:Support",
         "@llvm-project//mlir:TensorDialect",
         "@llvm-project//mlir:TransformUtils",
