--- a/compiler/src/iree/compiler/Dialect/Stream/Transforms/test/BUILD.bazel
+++ b/compiler/src/iree/compiler/Dialect/Stream/Transforms/test/BUILD.bazel
@@ -67,6 +67,7 @@ iree_lit_test_suite(
             "schedule_execution_timeline_aware.mlir",
             "specialize_dispatches.mlir",
             "specialize_encodings.mlir",
+            "split_parameter_encoder.mlir",
             "sync_initializers.mlir",
             "unify_encoding_for_globals.mlir",
             "verify_affinities.mlir",
