--- a/compiler/src/iree/compiler/ExternalInterfaces/CMakeLists.txt
+++ b/compiler/src/iree/compiler/ExternalInterfaces/CMakeLists.txt
@@ -39,6 +39,7 @@ iree_cc_library(
     MLIRLinalgOpsIncGenLib
     MLIRLinalgStructuredOpsIncGenLib
     MLIRMLProgramDialect
+    MLIRMemRefDialect
     MLIRSCFDialect
     MLIRTensorDialect
     MLIRValueBoundsOpInterface
