--- a/compiler/src/iree/compiler/Utils/CMakeLists.txt
+++ b/compiler/src/iree/compiler/Utils/CMakeLists.txt
@@ -18,7 +18,6 @@ iree_cc_library(
     "EmbeddedDataDirectory.h"
     "EquivalenceUtils.h"
     "FlatbufferUtils.h"
-    "Folding.h"
     "Indexing.h"
     "IntegerSet.h"
     "ModuleUtils.h"
@@ -52,6 +51,7 @@ iree_cc_library(
     MLIRAffineDialect
     MLIRAnalysis
     MLIRArithDialect
+    MLIRBytecodeWriter
     MLIRFuncDialect
     MLIRFunctionInterfaces
     MLIRIR
