--- a/runtime/src/iree/hal/drivers/CMakeLists.txt
+++ b/runtime/src/iree/hal/drivers/CMakeLists.txt
@@ -136,6 +136,10 @@ if(IREE_HAL_DRIVER_HIP)
   add_subdirectory(hip)
   list(APPEND _INIT_INTERNAL_DEPS iree::hal::drivers::hip::registration)
 endif()
+if(IREE_HAL_DRIVER_HSA)
+  add_subdirectory(hsa)
+  list(APPEND _INIT_INTERNAL_DEPS iree::hal::drivers::hsa::registration)
+endif()
 if(IREE_HAL_DRIVER_LOCAL_SYNC)
   add_subdirectory(local_sync)
   list(APPEND _INIT_INTERNAL_DEPS iree::hal::drivers::local_sync::registration)
