[Codegen] Add PCF bufferization interfaces
This adds bufferization interfaces for PCF ops. Tensor operands are
bufferized while `pcf.sref` operands are preserved, now ready for
conversion at a later point in the pipeline.

--- a/compiler/src/iree/compiler/Codegen/Interfaces/BUILD.bazel
+++ b/compiler/src/iree/compiler/Codegen/Interfaces/BUILD.bazel
@@ -49,6 +49,7 @@ iree_compiler_cc_library(
         ":ProcessorOpInterfaces",
         ":UKernelOpInterface",
         ":TensorMaskingOpInterface",
+        "//compiler/src/iree/compiler/Codegen/Dialect/PCF/ExternalInterfaces:ExternalModels",
         "//compiler/src/iree/compiler/Codegen/ExternalInterfaces:ExternalModels",
         "//compiler/src/iree/compiler/Dialect/LinalgExt/TransformExtensions:LinalgExtExtensions",
         "//llvm-external-projects/iree-dialects:IREELinalgTransformDialect",
