[Codegen] Add PCF Transforms
This adds the transformation passes for the PCF dialect:

- ConvertForallToLoopsPass: Entry point that converts scf.forall ops
  with workgroup mapping to pcf.loop
- FuseConsumersPass: Fuses consumer operations into pcf.loop bodies
- FusePCFWritesPass: Consolidates pcf.write_slice ops in loop bodies
- LowerStructuralPCFPass: Lowers pcf.generic/loop to scf.execute_region/forall
- ConvertSRefToMemRefPass: Converts pcf.sref types to concrete memref types
- ResolveTokensPass: Resolves sync scope tokens on pcf.sref types

Also includes:
- Transforms.h/cpp: Shared transformation utilities for PCF
- ConversionDialectInterface.h: Interface for dialect-specific lowering

--- a/compiler/src/iree/compiler/Codegen/Dialect/PCF/IR/BUILD.bazel
+++ b/compiler/src/iree/compiler/Codegen/Dialect/PCF/IR/BUILD.bazel
@@ -49,6 +49,7 @@ iree_compiler_cc_library(
         "PCFTypes.cpp.inc",
     ],
     hdrs = [
+        "PCF.h",
         "PCFAttrInterfaces.h.inc",
         "PCFAttrs.h",
         "PCFAttrs.h.inc",
