--- a/compiler/src/iree/compiler/Utils/BUILD.bazel
+++ b/compiler/src/iree/compiler/Utils/BUILD.bazel
@@ -61,6 +61,7 @@ iree_compiler_cc_library(
         "PatternUtils.h",
         "Permutation.h",
         "RegionOpUtils.h",
+        "RewriteUtils.h",
         "ShapeUtils.h",
         "StringUtils.h",
         "ToolUtils.h",
