--- a/compiler/src/iree/compiler/Utils/CMakeLists.txt
+++ b/compiler/src/iree/compiler/Utils/CMakeLists.txt
@@ -28,6 +28,7 @@ iree_cc_library(
     "PatternUtils.h"
     "Permutation.h"
     "RegionOpUtils.h"
+    "RewriteUtils.h"
     "ShapeUtils.h"
     "StringUtils.h"
     "ToolUtils.h"
