--- a/compiler/src/iree/compiler/Dialect/LinalgExt/Transforms/test/BUILD.bazel
+++ b/compiler/src/iree/compiler/Dialect/LinalgExt/Transforms/test/BUILD.bazel
@@ -22,6 +22,8 @@ iree_lit_test_suite(
             "convert_to_online_attention.mlir",
             "decompose_aggregated_ops.mlir",
             "decompose_aggregated_ops_filtered.mlir",
+            "decompose_aggregated_ops_invalid_bad_op_name.mlir",
+            "decompose_aggregated_ops_invalid_unimplemented_interface.mlir",
             "decompose_aggregated_ops_noop.mlir",
             "decompose_im2col.mlir",
             "decompose_map_scatter.mlir",
