[Codegen] Replace workgroup loops with pcf.generic
This commit adds the remaining PCF infrastructure and plumbing to
replace all workgroup loops with pcf.generic ops:

1. Common passes:
   - ConvertWorkgroupForallToPCF: Converts workgroup-mapped scf.forall to pcf.loop
   - CombineSplitKWorkgroupLoop: Combines nested pcf.loops for split-K operations
   - FuseTensorToBufferConverters: Fuses tensor-to-buffer conversion patterns

2. Pipeline integration:
   - LLVMCPU: Adds PCF passes to pipelines with --iree-llvmcpu-test-pcf flag
   - LLVMGPU: Adds PCF lowering passes
   - SPIRV: Adds PCF lowering passes
   - VMVX: Adds PCF lowering passes

3. CodegenExternalModels: Adds workgroup scope PCF support

4. Codegen dialect extensions:
   - WorkgroupAttr implements PCF ScopeAttr interface
   - WorkgroupMappingAttr with linearize support

5. Bug fixes:
   - Fix null ArrayAttr crash in ConvertWorkgroupForallToPCF
   - Fix MLIRBufferizationInterfaces -> MLIRBufferizationDialect in CMake
   - Add --iree-llvmcpu-test-pcf flag to pipeline tests

--- a/compiler/src/iree/compiler/Codegen/Common/BUILD.bazel
+++ b/compiler/src/iree/compiler/Codegen/Common/BUILD.bazel
@@ -81,6 +81,7 @@ iree_compiler_cc_library(
         "BufferizeDispatchTensorLoadStore.cpp",
         "CleanupBufferAllocViewPass.cpp",
         "CombineLayoutTransformation.cpp",
+        "CombineSplitKWorkgroupLoop.cpp",
         "ConcretizePadResultShape.cpp",
         "ConfigTrackingCanonicalizer.cpp",
         "ConvertAccGEMMToGEMMPass.cpp",
@@ -88,6 +89,7 @@ iree_compiler_cc_library(
         "ConvertBf16ToUInt16Buffers.cpp",
         "ConvertToDestinationPassingStylePass.cpp",
         "ConvertUnsupportedFloatArithPass.cpp",
+        "ConvertWorkgroupForallToPCF.cpp",
         "ConvolutionToIGEMM.cpp",
         "DecomposeAffineOpsPass.cpp",
         "DecomposeConvolutionToLowerDimOps.cpp",
@@ -111,6 +113,7 @@ iree_compiler_cc_library(
         "ForOpCanonicalizationPass.cpp",
         "ForallToFor.cpp",
         "FuseTensorPadWithConsumer.cpp",
+        "FuseTensorToBufferConverters.cpp",
         "GenericVectorization.cpp",
         "HoistStaticallyBoundAllocations.cpp",
         "HoistUnrolledVectorExtractInsertSlice.cpp",
