--- a/compiler/src/iree/compiler/Codegen/Common/test/CMakeLists.txt
+++ b/compiler/src/iree/compiler/Codegen/Common/test/CMakeLists.txt
@@ -25,12 +25,14 @@ iree_lit_test_suite(
     "canonicalize_interface_load_store.mlir"
     "check_for_config.mlir"
     "combine_layout_transformation.mlir"
+    "combine_splitk_workgroup_loop.mlir"
     "convert_accgemm_to_gemm.mlir"
     "convert_bf16_arith_to_f32.mlir"
     "convert_bf16_to_uint16_buffers.mlir"
     "convert_hal_descriptor_type_to_gpu_address_space.mlir"
     "convert_to_destination_passing_style.mlir"
     "convert_unsupported_float_arith.mlir"
+    "convert_workgroup_forall_to_pcf.mlir"
     "convolution_to_igemm.mlir"
     "convolutions.mlir"
     "decompose_affine_ops.mlir"
@@ -56,6 +58,7 @@ iree_lit_test_suite(
     "fold_tensor_extract_op.mlir"
     "forall_to_for.mlir"
     "forop_canonicalization.mlir"
+    "fuse_tensor_to_buffer_converters.mlir"
     "generic_vectorization.mlir"
     "hoist_statically_bound_allocations.mlir"
     "hoist_unrolled_vector_extract_insert_slice.mlir"
