--- a/compiler/src/iree/compiler/Codegen/Dialect/Codegen/IR/BUILD.bazel
+++ b/compiler/src/iree/compiler/Codegen/Dialect/Codegen/IR/BUILD.bazel
@@ -36,6 +36,7 @@ iree_td_library(
         include = ["*.td"],
     ),
     deps = [
+        "//compiler/src/iree/compiler/Codegen/Dialect/PCF/IR:td_files",
         "//compiler/src/iree/compiler/Codegen/Interfaces:td_files",
         "//compiler/src/iree/compiler/Utils:td_files",
         "@llvm-project//mlir:DestinationStyleOpInterfaceTdFiles",
@@ -95,6 +96,7 @@ iree_compiler_cc_library(
         ":LoweringConfigGen",
         ":LoweringConfigInterfaceGen",
         ":UKernelOpsGen",
+        "//compiler/src/iree/compiler/Codegen/Dialect/PCF/IR",
         "//compiler/src/iree/compiler/Codegen/Interfaces:UKernelOpInterface",
         "//compiler/src/iree/compiler/Dialect/Util/IR",
         "//compiler/src/iree/compiler/Utils",
