--- a/compiler/src/iree/compiler/Codegen/Dialect/Codegen/IR/CMakeLists.txt
+++ b/compiler/src/iree/compiler/Codegen/Dialect/Codegen/IR/CMakeLists.txt
@@ -75,6 +75,7 @@ iree_cc_library(
     MLIRTransformDialectTransforms
     MLIRVectorInterfaces
     MLIRViewLikeInterface
+    iree::compiler::Codegen::Dialect::PCF::IR
     iree::compiler::Codegen::Interfaces::UKernelOpInterface
     iree::compiler::Dialect::Util::IR
     iree::compiler::Utils
