Add CDNA3 test filtering to CI
Tests with `requires-gpu-cdna3` label lacked the filtering mechanism in
`ctest_all.sh`. It could leak to run on non-cdna3 machines.

This adds `IREE_AMD_CDNA3_TESTS_DISABLE`: disabled by default, excludes labeled
tests when set.

It should also enables CDNA3 tests in MI325 workflow.

--- a/.github/workflows/pkgci_test_amd_mi325.yml
+++ b/.github/workflows/pkgci_test_amd_mi325.yml
@@ -62,6 +62,7 @@ jobs:
         env:
           CTEST_PARALLEL_LEVEL: 2
           IREE_CTEST_LABEL_REGEX: ^requires-gpu|^driver=hip$
+          IREE_AMD_CDNA3_TESTS_DISABLE: 0
           IREE_AMD_RDNA3_TESTS_DISABLE: 1
           IREE_NVIDIA_GPU_TESTS_DISABLE: 0
           IREE_NVIDIA_SM80_TESTS_DISABLE: 1
