--- a/tests/e2e/stablehlo_ops/CMakeLists.txt
+++ b/tests/e2e/stablehlo_ops/CMakeLists.txt
@@ -44,6 +44,7 @@ iree_check_single_backend_test_suite(
     "exponential_fp16.mlir"
     "exponential_minus_one.mlir"
     "fft.mlir"
+    "fft_complex.mlir"
     "finite.mlir"
     "floor.mlir"
     "gather.mlir"
@@ -121,6 +122,7 @@ iree_check_single_backend_test_suite(
     "exponential_fp16.mlir"
     "exponential_minus_one.mlir"
     "fft.mlir"
+    "fft_complex.mlir"
     "finite.mlir"
     "floor.mlir"
     "gather.mlir"
@@ -342,6 +344,7 @@ iree_check_single_backend_test_suite(
     "exponential_fp16.mlir"
     "exponential_minus_one.mlir"
     "fft.mlir"
+    "fft_complex.mlir"
     "finite.mlir"
     "floor.mlir"
     "gather.mlir"
@@ -425,6 +428,7 @@ iree_check_single_backend_test_suite(
     "exponential_fp16.mlir"
     "exponential_minus_one.mlir"
     "fft.mlir"
+    "fft_complex.mlir"
     "finite.mlir"
     "floor.mlir"
     "gather.mlir"
@@ -507,6 +511,7 @@ iree_check_single_backend_test_suite(
     "exponential_fp16.mlir"
     "exponential_minus_one.mlir"
     "fft.mlir"
+    "fft_complex.mlir"
     "finite.mlir"
     "floor.mlir"
     "gather.mlir"
@@ -581,6 +586,7 @@ iree_check_single_backend_test_suite(
     "exponential_fp16.mlir"
     "exponential_minus_one.mlir"
     "fft.mlir"
+    "fft_complex.mlir"
     "finite.mlir"
     "floor.mlir"
     "gather.mlir"
@@ -727,6 +733,7 @@ iree_check_single_backend_test_suite(
     "exponential_fp16.mlir"
     "exponential_minus_one.mlir"
     "fft.mlir"
+    "fft_complex.mlir"
     "finite.mlir"
     "floor.mlir"
     "gather.mlir"
