Adding VMFB disassembly and cleaning up move handling. This adds `iree-dump-module --output=disassembly` support via a new bytecode module loading mode that allows for offline disassembly.

--- a/tools/BUILD.bazel
+++ b/tools/BUILD.bazel
@@ -135,6 +135,7 @@ iree_runtime_cc_binary(
         "//runtime/src/iree/base/internal/flatcc:parsing",
         "//runtime/src/iree/io:file_handle",
         "//runtime/src/iree/schemas:bytecode_module_def_c_fbs",
+        "//runtime/src/iree/vm",
         "//runtime/src/iree/vm/bytecode:module",
     ],
 )
