--- a/tools/test/BUILD.bazel
+++ b/tools/test/BUILD.bazel
@@ -38,6 +38,7 @@ iree_lit_test_suite(
             "iree-compile-help.txt",
             "iree-benchmark-module.mlir",
             "iree-convert-parameters.txt",
+            "iree-dump-module.mlir",
             "iree-dump-parameters.txt",
             "iree-link-bundle.mlir",
             "iree-link.mlir",
@@ -101,6 +102,7 @@ iree_lit_test_suite(
         "//tools:iree-benchmark-module",
         "//tools:iree-compile",
         "//tools:iree-convert-parameters",
+        "//tools:iree-dump-module",
         "//tools:iree-dump-parameters",
         "//tools:iree-link",
         "//tools:iree-opt",
