--- a/tools/test/CMakeLists.txt
+++ b/tools/test/CMakeLists.txt
@@ -26,6 +26,7 @@ iree_lit_test_suite(
     "iree-benchmark-module.mlir"
     "iree-compile-help.txt"
     "iree-convert-parameters.txt"
+    "iree-dump-module.mlir"
     "iree-dump-parameters.txt"
     "iree-link-bundle.mlir"
     "iree-link.mlir"
@@ -51,6 +52,7 @@ iree_lit_test_suite(
     iree-benchmark-module
     iree-compile
     iree-convert-parameters
+    iree-dump-module
     iree-dump-parameters
     iree-link
     iree-opt
