--- a/compiler/src/iree/compiler/Dialect/TensorExt/Transforms/BUILD.bazel
+++ b/compiler/src/iree/compiler/Dialect/TensorExt/Transforms/BUILD.bazel
@@ -46,6 +46,7 @@ iree_compiler_cc_library(
     deps = [
         ":PassesIncGen",
         "//compiler/src/iree/compiler/Dialect/TensorExt/IR",
+        "@llvm-project//mlir:FunctionInterfaces",
         "@llvm-project//mlir:IR",
         "@llvm-project//mlir:Pass",
         "@llvm-project//mlir:SCFDialect",
