--- a/compiler/src/iree/compiler/Dialect/TensorExt/Transforms/CMakeLists.txt
+++ b/compiler/src/iree/compiler/Dialect/TensorExt/Transforms/CMakeLists.txt
@@ -40,6 +40,7 @@ iree_cc_library(
     "TestSparseInterfaceMethods.cpp"
   DEPS
     ::PassesIncGen
+    MLIRFunctionInterfaces
     MLIRIR
     MLIRPass
     MLIRSCFDialect
